add button section

--- a/public/assets/scss/Elements/_sideBar.scss
+++ b/public/assets/scss/Elements/_sideBar.scss
@@ -27,7 +27,7 @@
       font-size: 15px;
       color: var(--color-white);
     }
-    .btn-transparent_opacity {
+    .small_solid_color_opacity {
       color: var(--color-white);
       &:hover {
         background-color: var(--color-white);
