--- a/public/assets/scss/components/_priceingTable.scss
+++ b/public/assets/scss/components/_priceingTable.scss
@@ -89,7 +89,7 @@
           line-height: 25px;
           margin-top: 17px;
         }
-        .btn-transparent {
+        .small_solid_color {
           margin-top: 7px;
         }
         img {
@@ -101,7 +101,7 @@
           top: 22px;
           right: 35px;
           color: rgb(46, 46, 46);
-          z-index: 999;
+          z-index: 100;
           font-size: 20px;
         }
       }
