--- a/public/assets/scss/components/_project_section.scss
+++ b/public/assets/scss/components/_project_section.scss
@@ -32,7 +32,7 @@
             padding: 0;
           }
         }
-        .btn-transparent {
+        .small_solid_color {
           text-align: center;
         }
       }
