--- a/public/assets/scss/components/_latestNews.scss
+++ b/public/assets/scss/components/_latestNews.scss
@@ -5,7 +5,7 @@
   }
   @media #{$sm-layout-device} {
     padding: 0;
-  } 
+  }
   .wrapper {
     .part_1 {
       .wrapperBody {
@@ -119,7 +119,7 @@
                 transition: all 0.5s linear;
                 opacity: 0;
               }
-              .btn-transparent_opacity {
+              .small_solid_color_opacity {
                 color: var(--color-white);
                 &:hover {
                   background: var(--color-white);
