--- a/public/assets/scss/components/_serviceOption.scss
+++ b/public/assets/scss/components/_serviceOption.scss
@@ -56,7 +56,7 @@
           display: block;
           font-weight: 500;
         }
-        .btn-transparent {
+        .small_solid_color {
           margin-top: 15px;
         }
         &:hover {
