--- a/public/assets/scss/components/_workStation.scss
+++ b/public/assets/scss/components/_workStation.scss
@@ -7,20 +7,20 @@
     align-items: center;
     height: 100%;
     padding: 100px 270px;
-    @media #{$md-layout-device}{
+    @media #{$md-layout-device} {
       padding: 50px 40px;
     }
-    @media #{$sm-layout-device}{
+    @media #{$sm-layout-device} {
       padding: 50px 10px;
     }
     .data {
       background-color: #000;
       padding: 80px;
       border-radius: 10px;
-      @media #{$md-layout-device}{
+      @media #{$md-layout-device} {
         padding: 30px;
       }
-      @media #{$sm-layout-device}{
+      @media #{$sm-layout-device} {
         padding: 30px;
       }
       h2 {
@@ -33,7 +33,7 @@
         font-size: 15px;
         color: var(--color-white);
       }
-      .btn-transparent {
+      .small_solid_color {
         margin-top: 20px;
       }
     }
