--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -84,6 +84,7 @@ STYLE SHEET INDEX END
 @import "components/latestNews";
 @import "components/counter";
 @import "components/workStation";
+@import "components/contact";
 @import "components/team";
 @import "components/brandLogo";
 @import "components/newsLetter";
