--- a/Client-side/public/assets/scss/components/_project_section.scss
+++ b/Client-side/public/assets/scss/components/_project_section.scss
@@ -232,7 +232,7 @@
   }
 }
 
-// project for single portfolio page
+// project for single project page
 
 .portfolioDetails {
   margin-bottom: 100px;
