--- a/Client-side/public/assets/scss/style.scss
+++ b/Client-side/public/assets/scss/style.scss
@@ -95,6 +95,10 @@ STYLE SHEET INDEX END
 @import "Elements/sideBar";
 
 /****************************************************
+                 Dashboard Styles
+*****************************************************/
+@import "Dashboad/masterLayout";
+/****************************************************
                  Block Element Styles
 *****************************************************/
 @import "Block/video_popup";
