--- a/Client-side/public/assets/scss/components/_portfolio.scss
+++ b/Client-side/public/assets/scss/components/_portfolio.scss
@@ -38,7 +38,7 @@
   }
 }
 
-// single portfolio details start
+// single project details start
 
 .portfolioDetails {
   .wrapper {
@@ -192,7 +192,7 @@
   }
 }
 
-// Portfolio gallery
+// Project gallery
 
 .galleryOption {
   margin-top: 80px;
