--- a/Client-side/public/assets/scss/style.scss
+++ b/Client-side/public/assets/scss/style.scss
@@ -105,6 +105,7 @@ STYLE SHEET INDEX END
 @import "Dashboad/allPostComponent";
 @import "Dashboad/createProject";
 @import "Dashboad/userComponents";
+@import "Dashboad/singleMassageComponents";
 /****************************************************
                  Block Element Styles
 *****************************************************/
