--- a/Client-side/public/assets/scss/Elements/_sideBar.scss
+++ b/Client-side/public/assets/scss/Elements/_sideBar.scss
@@ -76,8 +76,12 @@
         }
         .headingText {
           color: var(--heading-color);
-          font-size: 18px;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 20px;
+          display: block;
           font-weight: 600;
+          padding-left: 10px;
           &:hover {
             color: var(--primary-theme-color);
           }
@@ -90,7 +94,7 @@
 // TagBox start
 
 .tagBox {
-  margin-top: 50px;
+  margin-top: 20px;
   .tagBoxInner {
     border: 1px solid #ddd;
     padding: 25px 22px;
