--- a/Client-side/public/assets/scss/Dashboad/_createNewPost.scss
+++ b/Client-side/public/assets/scss/Dashboad/_createNewPost.scss
@@ -70,10 +70,88 @@
             margin-bottom: 5px;
             display: inline-block;
           }
-          input {
-            height: auto;
+          .adons {
+            width: 550px;
+            .input__Data {
+              display: flex;
+              input {
+                padding: 10px 15px;
+                height: 40px;
+                border-radius: 5px;
+                &:focus-visible {
+                  outline: 1px solid #ddd !important;
+                }
+              }
+              .my__btn {
+                display: block;
+                width: 235px;
+                margin-left: 14px;
+                padding: 8px 10px;
+                background: #151529;
+                color: #fff;
+                border-radius: 5px;
+                -webkit-transition: all 0.2s linear;
+                -moz-transition: all 0.2s linear;
+                -ms-transition: all 0.2s linear;
+                -o-transition: all 0.2s linear;
+                transition: all 0.2s linear;
+                &:hover {
+                  opacity: 0.9;
+                }
+              }
+            }
+            .showCategory {
+              display: grid;
+              grid-template-columns: repeat(6, 1fr);
+              grid-column-gap: 10px;
+              grid-row-gap: 10px;
+              .inner__cat {
+                display: flex;
+                border: 2px solid #151529;
+                padding: 2px 10px;
+                margin-top: 14px;
+                justify-content: space-between;
+                border-radius: 5px;
+                background: transparent;
+                color: var(--paragraph-color);
+                .text {
+                  font-size: 14px;
+                  margin-bottom: 0;
+                  display: inline-block;
+                  margin-right: 7px;
+                  line-height: 2;
+                }
+                .mdi {
+                  font-size: 19px;
+                  margin-bottom: 0;
+                  display: inline-block;
+                  color: red;
+                  cursor: pointer;
+                }
+              }
+            }
           }
         }
+
+        .child__asset {
+          .sub_child {
+            margin-top: 15px;
+            input {
+              padding: 10px 15px;
+              height: 40px;
+              border-radius: 5px;
+              &:focus-visible {
+                outline: 1px solid #ddd !important;
+              }
+            }
+            span {
+              font-size: 14px;
+              margin-bottom: 5px;
+              display: inline-block;
+            }
+          }
+        }
+
         .rich__text {
           margin-top: 20px;
           .ql-container {
@@ -84,6 +162,10 @@
           margin-top: 20px;
           .input__box {
             position: relative;
+            display: flex;
+            .box {
+              width: 50%;
+            }
             label {
               width: 100%;
               height: 100px;
@@ -98,11 +180,13 @@
               cursor: pointer;
             }
             .img__file {
-              position: absolute;
-              top: 10px;
-              right: 35px;
-              width: 150px;
-              height: 80px;
+              width: 50%;
+              display: flex;
+              justify-content: end;
+              .inner {
+                width: 150px;
+                height: 80px;
+              }
               img {
                 max-width: 100%;
                 height: 100%;
@@ -110,11 +194,21 @@
             }
             .close {
               position: absolute;
-              top: -2px;
               right: 10px;
               z-index: 99;
               padding: 5px;
+              bottom: -25px;
               cursor: pointer;
+              .my__btn {
+                padding: 5px 10px;
+                border-radius: 5px;
+                margin-left: 7px;
+                background: #17b978;
+                color: #fff;
+                &:hover {
+                  opacity: 0.8;
+                }
+              }
 
               .mdi {
                 font-size: 24px;
