--- a/Client-side/public/assets/scss/default/_quickCode.scss
+++ b/Client-side/public/assets/scss/default/_quickCode.scss
@@ -15,17 +15,17 @@
 
 // Scrollbar Design
 
-::-webkit-scrollbar {
-  width: 20px;
-}
-::-webkit-scrollbar-track {
-  // background-color: var(--primary-theme-color);
-}
+// ::-webkit-scrollbar {
+//   width: 20px;
+// }
+// ::-webkit-scrollbar-track {
+//   // background-color: var(--primary-theme-color);
+// }
 
-::-webkit-scrollbar-thumb {
-  background-image: url(https://res.cloudinary.com/amitjs/image/upload/v1651867665/ICON/teacher_1_alczaa.png);
-  background-repeat: no-repeat;
-}
+// ::-webkit-scrollbar-thumb {
+//   background-image: url(https://res.cloudinary.com/amitjs/image/upload/v1651867665/ICON/teacher_1_alczaa.png);
+//   background-repeat: no-repeat;
+// }
 
 .none {
   display: none;
