--- a/Client-side/public/assets/scss/Dashboad/_createNewPost.scss
+++ b/Client-side/public/assets/scss/Dashboad/_createNewPost.scss
@@ -107,7 +107,7 @@
               grid-row-gap: 10px;
               .inner__cat {
                 display: flex;
-                border: 2px solid #151529;
+                border: 1px solid #ddd;
                 padding: 2px 10px;
                 margin-top: 14px;
                 justify-content: space-between;
