--- a/Client-side/public/assets/scss/components/_project_section.scss
+++ b/Client-side/public/assets/scss/components/_project_section.scss
@@ -113,6 +113,48 @@
             margin: 20px 0;
           }
         }
+        .pagination {
+          display: flex;
+          justify-content: center;
+          ul {
+            padding-left: 0;
+            li {
+              padding: 5px;
+              display: inline-block;
+            }
+            li.active a {
+              background: var(--primary-theme-color);
+              border: 2px solid var(--primary-theme-color);
+              color: var(--color-white);
+              padding: 0 15px;
+              display: block;
+              text-align: center;
+              line-height: 40px;
+              min-width: 42px;
+              height: 42px;
+              position: relative;
+              border-radius: 5px;
+            }
+            a {
+              background: var(--color-white);
+              border: 2px solid #ddd;
+              color: var(--paragraph-color);
+              padding: 0 15px;
+              display: block;
+              text-align: center;
+              line-height: 40px;
+              min-width: 42px;
+              height: 42px;
+              position: relative;
+              border-radius: 5px;
+              &:hover {
+                background: var(--primary-theme-color);
+                border: 2px solid var(--primary-theme-color);
+                color: var(--color-white);
+              }
+            }
+          }
+        }
       }
       @media #{$sm-layout-device} {
         margin-top: 30px;
