--- a/Client-side/public/assets/scss/components/_serviceOption.scss
+++ b/Client-side/public/assets/scss/components/_serviceOption.scss
@@ -125,6 +125,7 @@
             border-radius: 10px;
             margin-bottom: 20px;
             transition: all 0.3s linear;
+            cursor: pointer;
             img {
               width: 60px;
             }
