--- a/Client-side/public/assets/scss/header/_header.scss
+++ b/Client-side/public/assets/scss/header/_header.scss
@@ -49,46 +49,15 @@
       padding-bottom: 10px;
     }
     .header-wrapper {
-      padding: 10px 0;
+      padding: 0;
       transition: 0.3s;
-
-      // .mainMenuNav {
-      //   ul {
-      //     &.mainMenu {
-      //       > li {
-      //         > a {
-      //           position: relative;
-      //           &::after {
-      //             position: absolute;
-      //             content: "";
-      //             left: 0;
-      //             width: 0;
-      //             height: 3px;
-      //             background: var(--primary-theme-color);
-      //             transition: 0.3s;
-      //             bottom: 0;
-      //           }
-      //         }
-      //         &.is-current {
-      //           a {
-      //             color: var(--primary-theme-color);
-
-      //             &::after {
-      //               width: 100%;
-      //             }
-      //           }
-      //         }
-      //       }
-      //     }
-      //   }
-      // }
     }
   }
   &.header-fixed {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
     align-items: center;
     background: #fff;
@@ -96,7 +65,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   &.sticky {
-    height: 85px;
+    height: 70px;
   }
   &.header-not-fixed {
     position: relative;
@@ -114,5 +83,13 @@
     position: relative;
     width: 100%;
     background: transparent;
+  }
+}
+
+.styles_scroll-to-top__2A70v {
+  background-color: var(--primary-theme-color) !important;
+  box-shadow: none !important;
+  svg {
+    fill: #fff !important;
   }
 }
