--- a/Client-side/public/assets/scss/header/_menu.scss
+++ b/Client-side/public/assets/scss/header/_menu.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
 
     .mainMenuNav {
-      margin-right: 100px;
+      // margin-right: 100px;
       ul {
         &.mainMenu {
           display: flex;
